Add All UI components

--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
   "dependencies": {
     "materialize-css": "^1.0.0",
     "react": "^16.13.1",
+    "react-animated-slider": "^2.0.0",
     "react-dom": "^16.13.1",
     "react-scripts": "^3.4.1"
   },
