--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "materialize-css": "^1.0.0",
     "react": "^16.13.1",
     "react-animated-slider": "^2.0.0",
+    "react-bootstrap": "^1.0.1",
     "react-dom": "^16.13.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "^3.4.1",
