--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
   "license": "MIT",
   "dependencies": {
     "axios": "^0.19.2",
+    "bootstrap": "^4.5.0",
     "express": "^4.17.1",
     "materialize-css": "^1.0.0",
     "react": "^16.13.1",
