--- a/.babelrc
+++ b/.babelrc
@@ -1,3 +1,17 @@
 {
   "presets": ["@babel/preset-react"]
+ 
+   
 }
+
+// {
+//   "presets": [
+//       "@babel/preset-env",
+//       "@babel/preset-react"
+//   ],
+//   "plugins": [
+//       [
+//         "@babel/plugin-proposal-class-properties"
+//       ]
+//   ]
+// }
