--- a/package.json
+++ b/package.json
@@ -30,18 +30,33 @@
   },
   "license": "MIT",
   "dependencies": {
+    "@coreui/coreui": "^2.0.6",
+    "@coreui/icons": "0.3.0",
+    "@coreui/react": "^2.0.5",
     "axios": "^0.19.2",
+    "bootstrap": "^4.1.3",
+    "classnames": "^2.2.6",
+    "core-js": "^2.5.7",
     "express": "^4.17.1",
+    "font-awesome": "^4.7.0",
+    "material-ui": "^0.20.2",
     "materialize-css": "^1.0.0",
-    "react": "^16.13.1",
+    "react": "^16.3.0",
     "react-animated-slider": "^2.0.0",
-    "react-dom": "^16.13.1",
+    "react-dom": "^16.3.0",
+    "react-redux": "^7.2.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "^3.4.1",
+    "react-stepper-horizontal": "^1.0.11",
+    "react-transition-group": "^1.2.1",
+    "reactstrap": "^8.4.1",
+    "redux": "^4.0.5",
+    "redux-form": "^8.3.6",
     "uuid": "^8.1.0"
   },
   "devDependencies": {
     "@babel/core": "^7.9.0",
+    "@babel/plugin-proposal-class-properties": "^7.10.1",
     "@babel/preset-env": "^7.9.6",
     "@babel/preset-react": "^7.9.4",
     "babel-jest": "^25.4.0",
