--- a/package.json
+++ b/package.json
@@ -30,9 +30,11 @@
   },
   "license": "MIT",
   "dependencies": {
+    "assets": "^3.0.1",
     "axios": "^0.19.2",
     "bootstrap": "^4.5.0",
     "express": "^4.17.1",
+    "jquery": "^3.5.1",
     "materialize-css": "^1.0.0",
     "react": "^16.13.1",
     "react-animated-slider": "^2.0.0",
